# coding_practice

./: README.md  lbfgs.c  ndarray.c
c/: Makefile  csr  csr.c  csr.h  lbfgs  memoryarena.c  memoryarena.h  ndarray.c
cpp/matrix/: Makefile  SparseCSR.cpp  SparseCSR.h  main  main.cpp
cpp/parallellization/: Makefile  main  main.cpp
rust/grrs/: Cargo.toml
rust/grrs/src/: main.rs
rust/spmat/: Cargo.toml
rust/spmat/src/: lib.rs  main.rs
